<resources>
    <string name="app_name">Rick and Morti</string>
    <string name="location_descr">Location:</string>
    <string name="origin_descr">Origin:</string>
    <string name="gender">Gender:</string>
    <string name="type">Type:</string>
    <string name="dimension">Dimension:</string>
    <string name="episodes">Episodes:</string>
    <string name="last_known_location">Last known location:</string>
    <string name="first_seen_in">First seen in:</string>
    <!--    <color name="black">#000000</color>-->
</resources>