<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#363636"
    tools:context=".MainActivityDescriptions">


    <ImageView
        android:id="@+id/imageViewPersonAvaDescriptions"
        android:layout_width="0dp"
        android:layout_height="480dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/textViewLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/location_descr"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/textViewType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewOrigin" />

    <TextView
        android:id="@+id/textViewOrigin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/origin_descr"
        android:layout_marginStart="16dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/textViewLocation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGender" />

    <TextView
        android:id="@+id/textViewGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/gender"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/textViewOrigin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPersonAvaDescriptions" />

    <TextView
        android:id="@+id/textViewType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/type"
        android:layout_marginStart="16dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/textViewDimension"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLocation" />

    <TextView
        android:id="@+id/textViewDimension"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/dimension"
        android:layout_marginStart="16dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/textViewEpisodes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewType" />

    <TextView
        android:id="@+id/textViewEpisodes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/episodes"
        android:layout_marginStart="16dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDimension" />

    <TextView
        android:id="@+id/textViewNameDescriptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="72dp"
        android:text="TextView"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewPersonAvaDescriptions"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageViewStatusDescrGreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewPersonAvaDescriptions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNameDescriptions"
        app:layout_constraintVertical_bias="0.096"
        app:srcCompat="@drawable/image_status_green" />

    <TextView
        android:id="@+id/textViewStatusDescrLife"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="24dp"
        android:text="TextView"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewPersonAvaDescriptions"
        app:layout_constraintStart_toEndOf="@+id/imageViewStatusDescrGreen"
        app:layout_constraintTop_toBottomOf="@+id/textViewNameDescriptions"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageViewStatusDescrRed"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewPersonAvaDescriptions"
        app:layout_constraintEnd_toStartOf="@+id/textViewStatusDescrLife"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNameDescriptions"
        app:layout_constraintVertical_bias="0.111"
        app:srcCompat="@drawable/image_status_red" />

    <ImageView
        android:id="@+id/imageViewStatusDescrWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewPersonAvaDescriptions"
        app:layout_constraintEnd_toStartOf="@+id/textViewStatusDescrLife"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNameDescriptions"
        app:layout_constraintVertical_bias="0.13"
        app:srcCompat="@drawable/image_status_white" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="onClickBackActivity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_frame_32"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textViewGenderInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="TextView"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textViewGender"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPersonAvaDescriptions" />

    <TextView
        android:id="@+id/textViewDimensionInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.943"
        app:layout_constraintStart_toEndOf="@+id/textViewDimension"
        app:layout_constraintTop_toBottomOf="@+id/textViewTypeInfo" />

    <TextView
        android:id="@+id/textViewTypeInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toEndOf="@+id/textViewType"
        app:layout_constraintTop_toBottomOf="@+id/textViewLocationInfo" />

    <TextView
        android:id="@+id/textViewOriginInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.946"
        app:layout_constraintStart_toEndOf="@+id/textViewOrigin"
        app:layout_constraintTop_toBottomOf="@+id/textViewGenderInfo" />

    <TextView
        android:id="@+id/textViewLocationInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.942"
        app:layout_constraintStart_toEndOf="@+id/textViewLocation"
        app:layout_constraintTop_toBottomOf="@+id/textViewOriginInfo" />

    <TextView
        android:id="@+id/textViewEpisodesInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toEndOf="@+id/textViewEpisodes"
        app:layout_constraintTop_toBottomOf="@+id/textViewDimensionInfo" />

    <TextView
        android:id="@+id/textViewSpeciesDescr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:text="TextView"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewPersonAvaDescriptions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textViewStatusDescrLife"
        app:layout_constraintTop_toBottomOf="@+id/textViewNameDescriptions"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageViewDashTwo"
        android:layout_width="8dp"
        android:layout_height="3dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewPersonAvaDescriptions"
        app:layout_constraintEnd_toStartOf="@+id/textViewSpeciesDescr"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textViewStatusDescrLife"
        app:layout_constraintTop_toBottomOf="@+id/textViewNameDescriptions"
        app:layout_constraintVertical_bias="0.194"
        app:srcCompat="@drawable/dash" />

</androidx.constraintlayout.widget.ConstraintLayout>